# post-processing-demo

./: .gitignore  CMakeLists.txt  README.md
shaders/default/: defaultScreen.frag
shaders/deferred/: gbuffer.frag  gbuffer.vert
shaders/gtao/: gtao.comp  gtao.frag  gtaoReference.comp  temporalFilterReference.comp
shaders/ssao/: blur.glsl  ssao.glsl
shaders/temporal/: history.comp
src/: CMakeLists.txt
src/core/: application.cpp  application.h
src/engine/: base_engine.cpp  base_engine.h  gl_engine.cpp  gl_engine.h
src/exes/: main.cpp
src/ui/: editor.cpp  editor.h  ui.cpp  ui.h
src/utils/: camera.cpp  camera.h  common_primitives.cpp  common_primitives.h  compute.cpp  compute.h  framebuffer.cpp  framebuffer.h  functions.cpp  functions.h  material.h  math.cpp  math.h  model.cpp  model.h  shader.cpp  shader.h  types.cpp  types.h
